--- a/src/main/resources/googleadstest.properties
+++ b/src/main/resources/googleadstest.properties
@@ -1,5 +1,6 @@
 # Version properties
 MODULE_VERSION=${pom.version}
 MODULE_BUILD_NUMBER=${buildNumber}
-SERVICE_PORT=8888
+SERVICE_PORT=7070
 LOG_SAMPLING_RATE=1
+SERVER_URL=http://localhost
