--- a/src/main/resources/googleadstest.properties
+++ b/src/main/resources/googleadstest.properties
@@ -4,3 +4,6 @@ MODULE_BUILD_NUMBER=${buildNumber}
 SERVICE_PORT=7070
 LOG_SAMPLING_RATE=1
 SERVER_URL=http://localhost
+GOOGLE_CLIENT_ID=612891262087-2uuo8o2btaqvq11b2diam4o7pcbhfdug.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=tx2Ib0gPxZttkPfllarTrq4j
+GOOGLE_DEV_TOKEN=hlA5BG8QG9A9Gd11McIk0A
